# Allfeat-Hackaton-Musicmint

./: README.md
.github/workflows/: ci.yml
backend/: .gitignore  a_launcher.sh  hardhat.config.js  package-lock.json  package.json
backend/contracts/: Admins.sol  Albums.sol
backend/contracts/ignition/modules/: ._deploy.js
backend/contracts/tmp/: Bridge.sol  BridgeInk.txt
backend/contracts/tmp/musicmint/: Cargo.toml  LICENSE  README.md
backend/contracts/tmp/musicmint/.github/workflows/: main.yaml
backend/contracts/tmp/musicmint/examples-cyril/: ._Bridge.sol  ._BridgeInk.txt  Bridge.sol  BridgeInk.txt
backend/contracts/tmp/musicmint/minted-contracts/admins/: .gitignore  Cargo.toml  admins.sol  lib.rs
backend/contracts/tmp/musicmint/minted-contracts/albums/: Cargo.toml  lib.rs
backend/contracts/tmp/musicmint/minted-frontend/: .env.example  README.md  cors.json  next.config.js  package.json  tsconfig.json
backend/contracts/tmp/musicmint/minted-squids/: .gitignore  README.md  schema.graphql
backend/contracts/tmp/musicmint/minted-squids/abi/: admin.json  admin.json.bkp
backend/scripts/: deploy.js
backend/test/: Admins.js  Albums.js
frontend/: next.config.mjs  note.txt  package-lock.json  package.json  tailwind.config.js
frontend/app/: globals.css  layout.js  page.js
frontend/app/admin/: page.js
frontend/app/album/: page.js
frontend/app/contracts/: Admins.json
frontend/components/: Album.js  Footer.js  Header.js  Layout.js  Main.js  Navbar.js
frontend/constants/: index.js
musicmint/minted-frontend/: .env
musicmint/minted-squids/: .env
(+85 files in other folders)
